# Gen2-UHF-RFID-Reader

./: README.md  pyproject.toml  requirements.txt
GUI/: app_main.py  app_test.py  initdb.py  kivy_trial.py  main.py  main_updated.py  projects.db  sending_email.py  test_concurrent.py  ui_main.py  view_db.py  watertracker_main.py  watertracker_main.spec  watertrackerapp.py  watertrackerapp.ui
gr-rfid/grc/: ZMQ_pub.py  ZMQ_sub.py  reader.grc  reader.py  rfid_tag_decoder.block.yml  simple_tag_viewer.py  sub_viewer.py
gr-rfid/lib/: gate_impl.cc  reader_impl.cc  reader_impl.h  tag_decoder_impl.cc  tag_decoder_impl.h
gr-rfid/misc/code/: plot_signal.py
